2010-11-12  Karl Berry  <karl@tug.org>

	* writet1.c: formatting changes only, to reduce diffs against
	pdftex's writet1.c.

2010-11-11  Thanh Han The  <thanh@river-valley.org>

	* writet1.c (t1_check_unusual_charstring): new fn.
	(t1_subset_charstrings): call it.  This resolves a bug reported by
	Knuth when there is a newline between the /CharStrings and the
	following number (dict size).

2010-10-23  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* output.c (hvpos): simplify the change 2010-10-22.
	Many thanks Peter.

2010-10-22  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* output.c (hvpos): recover the old code in hvpos() for japanese
	because the changed code leads to incorrect result in some cases.
	other cases than japanese are not affected.

2010-10-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* search.c (selfautoloc_prog): #include <kpathsea/concatn.h>
	for WIN32 and drop cast of concatn() results.

2010-06-19  Yan Li  <yan.i.li@intel.com>

	* tfmload.c (name): increase size to 500.
	(tfmopen): check for name length overflow.

2010-06-13  Karl Berry  <karl@tug.org>

	* dvips.texi: update for 2010.

2010-06-04  Karl Berry  <karl@tug.org>

	* afm2tfm.c (version),
	* dvips.h (BANNER): 5.99 for TeX Live 2010 (pretest 2, maybe final).

2010-05-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* config.ps: include cid-base.map.

2010-05-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* search.c: quote command in W32 case to allow path name
	with spaces.

2010-05-18  Karl Berry  <karl@tug.org>

	* config.h (type1path): rename from type1.
	* writet1.c (t1_open): use type1path, not headerpath.

	* configure.ac (AC_INIT),
	* afm2tfm.c: (version),
	* dvips.c (main), 
	* dvips.h (BANNER): 5.99/pretest, 2010.

2010-05-14  Karl Berry  <karl@tug.org>

	* resident.c,
	* output.c: more sprintf -> snprintf.

2010-05-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvips.h [SET_BINARY]: Add cast to void.
	* afm2tfm.c, finclude.c, output.c, search.c (SET_BINARY): Once